--- a/v1.html
+++ b/v1.html
@@ -49,9 +49,9 @@
   new TradingView.widget(
   {
   "width": 450,
-  "height": 910,
+  "height": 810,
   "symbol": get("name"),
-  "interval": "60",
+  "interval": "240",
   "timezone": "Etc/UTC",
   "theme": "dark",
   "style": "1",
@@ -80,9 +80,9 @@
   new TradingView.widget(
   {
   "width": 450,
-  "height": 910,
+  "height": 810,
   "symbol": get("name"),
-  "interval": "240",
+  "interval": "D",
   "timezone": "Etc/UTC",
   "theme": "dark",
   "style": "1",
@@ -113,9 +113,9 @@
   new TradingView.widget(
   {
   "width": 450,
-  "height": 910,
+  "height": 810,
   "symbol": get("name"),
-  "interval": "D",
+  "interval": "W",
   "timezone": "Etc/UTC",
   "theme": "dark",
   "style": "1",
