--- a/v3.html
+++ b/v3.html
@@ -65,6 +65,9 @@
     "StochasticRSI@tv-basicstudies",
     "WilliamR@tv-basicstudies"
   ],
+   "show_popup_button": true,
+  "popup_width": "1000",
+  "popup_height": "650",
   "container_id": "tradingview_9bbe9_60"
 }
   );
@@ -96,6 +99,9 @@
     "StochasticRSI@tv-basicstudies",
     "WilliamR@tv-basicstudies"
   ],
+   "show_popup_button": true,
+  "popup_width": "1000",
+  "popup_height": "650",
   "container_id": "tradingview_9bbe9_240"
 }
   );
@@ -129,6 +135,9 @@
     "StochasticRSI@tv-basicstudies",
     "WilliamR@tv-basicstudies"
   ],
+   "show_popup_button": true,
+  "popup_width": "1000",
+  "popup_height": "650",
   "container_id": "tradingview_9bbe9_D"
 }
   );
