--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   new TradingView.widget(
   {
   "autosize": true,
-  "symbol": "NASDAQ:AAPL",
+  "symbol": "ETHUSD",
   "timezone": "America/Los_Angeles",
   "theme": "dark",
   "style": "1",
