--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   "locale": "in",
   "toolbar_bg": "#f1f3f6",
   "enable_publishing": false,
-  "withdateranges": true,
-  "range": "3M",
+  "withdateranges":  true,"interval": "240",
+    
   "hide_side_toolbar": false,
   "allow_symbol_change": true,
   "details": true,
@@ -23,7 +23,8 @@
     "MACD@tv-basicstudies",
     "RSI@tv-basicstudies",
     "StochasticRSI@tv-basicstudies",
-    "WilliamR@tv-basicstudies"
+    "WilliamR@tv-basicstudies",
+    "MAExp@tv-basicstudies"
   ],
   "container_id": "tradingview_822c2"
 }
