--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     "RSI@tv-basicstudies",
     "StochasticRSI@tv-basicstudies",
     "WilliamR@tv-basicstudies",
-    "MAExp@tv-basicstudies"
+    "MAExp@tv-basicstudies",
+    "IchimokuCloud@tv-basicstudies",
+    "KLTNR@tv-basicstudies"
   ],
   "container_id": "tradingview_822c2"
 }
