--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     "WilliamR@tv-basicstudies",
     "MAExp@tv-basicstudies",
     "IchimokuCloud@tv-basicstudies",
+    "CCI@tv-basicstudies",
     "KLTNR@tv-basicstudies"
   ],
   "container_id": "tradingview_822c2"
