--- a/h.html
+++ b/h.html
@@ -5,7 +5,7 @@
  
 <p>Testing iframe:</p>
 
-<iframe src="https://www.foodkonnekt.com/web/orderV2?merchantId=300" height="900" width="1000" title="Iframe Example"></iframe>
+<iframe sandbox="allow-same-origin allow-scripts allow-popups allow-forms" src="https://www.foodkonnekt.com/web/orderV2?merchantId=300" height="900" width="1000" title="Iframe Example"></iframe>
 
 </body>
 </html>
