--- a/h.html
+++ b/h.html
@@ -3,9 +3,9 @@
 <body>
 
  
-<p>Testing iframe 3:</p>
+<p>Testing iframe 4:</p>
 
-<iframe sandbox="allow-same-origin allow-scripts allow-popups allow-forms" src="http://localhost:8080/foodkonnekt-web/orderV2?merchantId=477;jsessionid=${pageContext.session.id}" height="900" width="1000" title="Iframe Example"></iframe>
+<iframe sandbox="allow-same-origin allow-scripts allow-popups allow-forms" src="http://localhost:8080/foodkonnekt-web/orderV2?merchantId=477" height="900" width="1000" title="Iframe Example"></iframe>
 
 </body>
 </html>
