--- a/h.html
+++ b/h.html
@@ -3,9 +3,9 @@
 <body>
 
  
-<p>Testing iframe 6:</p>
+<p>Testing iframe 9:</p>
 
-<iframe sandbox="allow-same-origin allow-scripts allow-popups allow-forms" src="https://www.foodkonnekt.com/web/orderV2?merchantId=300" height="900" width="1000" title="Iframe Example"></iframe>
+<iframe  src="https://www.foodkonnekt.com/web/orderV2?merchantId=300" height="900" width="1000" title="Iframe Example"></iframe>
 
 </body>
 </html>
