--- a/h.html
+++ b/h.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
+ <head>
+  <script>
+ 
+
+ 
+	 
+		internals.settings.setStorageBlockingPolicy('AllowAll');
+ 
+</script>
+ </head>
 <body>
 
  
-<p>Testing iframe 9:</p>
+<p>Testing iframe 10:</p>
 
 <iframe  src="https://www.foodkonnekt.com/web/orderV2?merchantId=300" height="900" width="1000" title="Iframe Example"></iframe>
 
