--- a/h.html
+++ b/h.html
@@ -6,9 +6,9 @@
 <body>
 
  
-<p>Testing iframe 11:</p>
+<p>Testing iframe 44:</p>
 
-<iframe  src="https://www.foodkonnekt.com/web/orderV2?merchantId=300" height="900" width="1000" title="Iframe Example"></iframe>
+<iframe sandbox="allow-same-origin allow-scripts allow-popups allow-forms" src="https://www.foodkonnekt.com/web/orderV2?merchantId=300" height="900" width="1000" title="Iframe Example"></iframe>
 
 </body>
 </html>
